# PyDesktopBrowserRecorder

./: .project  .pydevproject  LICENSE  README.md  requirements.txt
ingov.egg-info/: PKG-INFO  SOURCES.txt
pydesktopbrowerrecorder/: LICENSE  README.md  requirements.txt  selenium_browser_desktop_recorder.py  setup.cfg
videoRecorder/: setup.py
videoRecorder/config/: checkConfiguration.py  importedModules.txt
videoRecorder/licenses/: imageio-LICENSE  imageio_ffmpeg-LICENSE
videoRecorder/test/: demo.py
videoRecorder/videoRecorder/: desktopBrowserRecorder.py
