[metadata]
name = pydesktopbrowerrecorder
version = 0.0.3
author = Antonio Pérez
author_email = ingovanpe@gmail.com
description = Module to record videos of an automation session using Selenium webdriver or the desktop.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AntoData/PyDesktopBrowserRecorder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
py_modules =
    selenium_browser_desktop_recorder